Add docker-compose dir and create yml file for kafka-service.